--- a/notebooks/1-train-model-with-brevitas.ipynb
+++ b/notebooks/1-train-model-with-brevitas.ipynb
@@ -2,56 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "90ed853b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'BaseModel' from 'braindecode.models.base' (/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/models/base.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbrevitas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01monnx\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbo\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#from braindecode.models.deep4 import Deep4Net\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mquantized_deep4\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m QuantDeep4Net\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbraindecode\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtorch_ext\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptimizers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AdamW\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbraindecode\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtorch_ext\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutil\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m set_random_seeds\n",
-      "File \u001b[0;32m/home/dan/Projects/fpga-eeg/extern/finn/notebooks/quantized_deep4.py:9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbrevitas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqnn\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbrevitas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mquant\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Int8Bias \u001b[38;5;28;01mas\u001b[39;00m BiasQuant\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbraindecode\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbase\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BaseModel\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbraindecode\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtorch_ext\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodules\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Expression, AvgPool2dWithConv\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbraindecode\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtorch_ext\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfunctions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m identity\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'BaseModel' from 'braindecode.models.base' (/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/models/base.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# import h5py\n",
     "import onnx\n",
     "import torch\n",
     "import numpy as np\n",
     "import torch.nn.functional as F\n",
-    "import brevitas.onnx as bo\n",
     "\n",
-    "#from braindecode.models.deep4 import Deep4Net\n",
     "from quantized_deep4 import QuantDeep4Net\n",
     "from braindecode.torch_ext.optimizers import AdamW\n",
-    "from braindecode.torch_ext.util import set_random_seeds"
+    "from braindecode.torch_ext.util import set_random_seeds\n",
+    "from brevitas.export import export_qonnx\n",
+    "from qonnx.util.cleanup import cleanup as qonnx_cleanup\n",
+    "from qonnx.core.modelwrapper import ModelWrapper\n",
+    "from finn.transformation.qonnx.convert_qonnx_to_finn import ConvertQONNXtoFINN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dcb67e0e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(400, 62, 1000, 1)\n",
-      "(400,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- Fake, learnable within-subject data (N,C,T,1) = (400,62,1000,1) ---\n",
-    "\n",
-    "\n",
     "rng = np.random.default_rng(42)\n",
     "N, C, T = 400, 62, 1000\n",
     "\n",
@@ -84,73 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "784a92a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n",
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/loggers.py:23: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for key, val in last_row.iteritems():\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<braindecode.experiments.experiment.Experiment at 0x78e5dd1002b0>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "X_train, Y_train = X[50:250], Y[50:250]\n",
     "X_val, Y_val = X[250:300], Y[250:300]\n",
     "X_test, Y_test = X[300:], Y[300:]\n",
@@ -208,26 +123,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a06b9852",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.6972942352294922, 'misclass': 0.52, 'runtime': 0.0002849102020263672}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/home_dir/.local/lib/python3.10/site-packages/braindecode/experiments/experiment.py:518: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.epochs_df = self.epochs_df.append(row_dict, ignore_index=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_loss = model.evaluate(X_test, Y_test)\n",
     "print(test_loss)"
@@ -235,18 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "dd3adfa3-db51-44e1-a9de-e94391371449",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from brevitas.export import export_qonnx\n",
-    "from qonnx.util.cleanup import cleanup as qonnx_cleanup\n",
-    "from qonnx.core.modelwrapper import ModelWrapper\n",
-    "from finn.transformation.qonnx.convert_qonnx_to_finn import ConvertQONNXtoFINN\n",
-    "\n",
-    "ready_model_filename = \"auto_mai_subj6_ready.onnx\"\n",
+    "ready_model_filename = \"model.onnx\"\n",
     "\n",
     "# CPU + eval + dummy input\n",
     "model.network.cpu().eval()\n",
