Small changes to notebooks, made model FINN friendly

--- a/notebooks/1-train-model-with-brevitas.ipynb
+++ b/notebooks/1-train-model-with-brevitas.ipynb
@@ -51,8 +51,6 @@
     "std  = X.std(axis=(0,2,3), keepdims=True) + 1e-6\n",
     "X = ((X - mean) / std).astype(np.float32)\n",
     "\n",
-    "# Hand back like your original get_data() call would\n",
-    "# X, Y now match what your code expects:\n",
     "#   X.shape == (N, 62, 1000, 1)\n",
     "#   Y.shape == (N,)\n",
     "print(X.shape)\n",
@@ -76,7 +74,7 @@
     "# final_conv_length = auto ensures we only get a single output in the time dimension\n",
     "model = QuantDeep4Net(in_chans=in_chans, n_classes=n_classes,\n",
     "                 input_time_length=X.shape[2],\n",
-    "                 final_conv_length=1, split_first_layer=False, quant_bit_width=2)#.cuda()"
+    "                 final_conv_length=1, split_first_layer=False, act_bit_width=2, weight_bit_width=2)#.cuda()"
    ]
   },
   {
