--- a/notebooks/2-synth-model-with-finn.ipynb
+++ b/notebooks/2-synth-model-with-finn.ipynb
@@ -23,7 +23,7 @@
     "model_dir = os.environ['ROOT_DIR'] + \"/notebooks\"\n",
     "model_file = model_dir + \"/model.onnx\"\n",
     "\n",
-    "out_dir = \"outputs/test_output\""
+    "out_dir = os.environ['ROOT_DIR'] + \"/outputs/test_output\""
    ]
   },
   {
@@ -42,6 +42,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c7021595-ba61-40ee-8fe4-be5aa0c0bc89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4c64ae54-c1a6-40e1-987f-a60fb8a79d25",
    "metadata": {},
    "outputs": [],
@@ -51,15 +61,16 @@
     "    # mvau_wwidth_max=36,\n",
     "    target_fps=150,\n",
     "    synth_clk_period_ns=10.0,\n",
+    "    # You can keep board=\"ZCU104\" if you like, but the key is fpga_part:\n",
     "    board=\"ZCU104\",\n",
-    "    fpga_part=\"xczu7ev-ffvc1156-2-e\",\n",
+    "    fpga_part=\"xczu7ev-ffvc1156-2-e\",          # <-- explicit part resolves the error\n",
     "    shell_flow_type=build_cfg.ShellFlowType.VIVADO_ZYNQ,\n",
     "    generate_outputs=[\n",
     "        build_cfg.DataflowOutputType.BITFILE,\n",
     "        build_cfg.DataflowOutputType.PYNQ_DRIVER,\n",
     "        build_cfg.DataflowOutputType.DEPLOYMENT_PACKAGE,\n",
     "    ],\n",
-    "    save_intermediate_models=True,\n",
+    "    save_intermediate_models=True,              # optional but helpful\n",
     ")"
    ]
   },
