--- a/notebooks/1-train-model-with-brevitas.ipynb
+++ b/notebooks/1-train-model-with-brevitas.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "from quantized_deep4 import QuantDeep4Net\n",
+    "from models.quantized_deep4 import QuantDeep4Net\n",
     "from braindecode.torch_ext.optimizers import AdamW\n",
     "from braindecode.torch_ext.util import set_random_seeds\n",
     "from brevitas.export import export_qonnx\n",
@@ -150,7 +150,7 @@
     "# Convert QONNX → FINN (no explicit dtype needed)\n",
     "mw = ModelWrapper(ready_model_filename)\n",
     "mw = mw.transform(ConvertQONNXtoFINN())\n",
-    "mw.save(ready_model_filename)\n"
+    "mw.save(ready_model_filename)"
    ]
   }
  ],
