Ran full experiment, moved models into src, made jupyter open on project root

--- a/notebooks/1-train-model-with-brevitas.ipynb
+++ b/notebooks/1-train-model-with-brevitas.ipynb
@@ -7,18 +7,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
     "import onnx\n",
     "import torch\n",
     "import numpy as np\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "from models.quantized_deep4 import QuantDeep4Net\n",
+    "# from src.models.quantized_deep4 import QuantDeep4Net\n",
     "from braindecode.torch_ext.optimizers import AdamW\n",
     "from braindecode.torch_ext.util import set_random_seeds\n",
     "from brevitas.export import export_qonnx\n",
     "from qonnx.util.cleanup import cleanup as qonnx_cleanup\n",
     "from qonnx.core.modelwrapper import ModelWrapper\n",
     "from finn.transformation.qonnx.convert_qonnx_to_finn import ConvertQONNXtoFINN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "071f03de-48e5-4d2f-a16a-6ca3f5980c6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(\"../src\")\n",
+    "\n",
+    "from models.quantized_deep4 import QuantDeep4Net"
    ]
   },
   {
@@ -116,7 +130,7 @@
    "outputs": [],
    "source": [
     "model.fit(X_train, Y_train, epochs=10, batch_size=16, scheduler='cosine', \n",
-    "        validation_data=(X_val, Y_val))#, remember_best_column='valid_loss')"
+    "        validation_data=(X_val, Y_val), remember_best_column='valid_loss')"
    ]
   },
   {
@@ -133,30 +147,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "80ae468e-fbc9-4fa5-a0e9-8bb81dbfa97b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_dir = os.environ['ROOT_DIR'] + \"/onnx\"\n",
+    "model_file = model_dir + \"/model.onnx\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dd3adfa3-db51-44e1-a9de-e94391371449",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ready_model_filename = \"model.onnx\"\n",
-    "\n",
     "# CPU + eval + dummy input\n",
     "model.network.cpu().eval()\n",
     "input_t = torch.randn(1, 62, 1000, 1)\n",
     "\n",
     "# Export → clean\n",
-    "export_qonnx(model.network, export_path=ready_model_filename, input_t=input_t)\n",
-    "qonnx_cleanup(ready_model_filename, out_file=ready_model_filename)\n",
+    "export_qonnx(model.network, export_path=model_file, input_t=input_t)\n",
+    "qonnx_cleanup(model_file, out_file=model_file)\n",
     "\n",
     "# Convert QONNX → FINN (no explicit dtype needed)\n",
-    "mw = ModelWrapper(ready_model_filename)\n",
+    "mw = ModelWrapper(model_file)\n",
     "mw = mw.transform(ConvertQONNXtoFINN())\n",
-    "mw.save(ready_model_filename)"
+    "mw.save(model_file)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
