--- a/notebooks/3_validate-model-with-pynq.ipynb
+++ b/notebooks/3_validate-model-with-pynq.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "961a2f71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import argparse\n",
     "import numpy as np\n",
     "from driver import io_shape_dict\n",
     "from driver_base import FINNExampleOverlay"
@@ -56,38 +55,14 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "\n",
-       "try {\n",
-       "require(['notebook/js/codecell'], function(codecell) {\n",
-       "  codecell.CodeCell.options_default.highlight_modes[\n",
-       "      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n",
-       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
-       "      Jupyter.notebook.get_cells().map(function(cell){\n",
-       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
-       "  });\n",
-       "});\n",
-       "} catch (e) {};\n"
-      ]
+      "application/javascript": "\ntry {\nrequire(['notebook/js/codecell'], function(codecell) {\n  codecell.CodeCell.options_default.highlight_modes[\n      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n      Jupyter.notebook.get_cells().map(function(cell){\n          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n  });\n});\n} catch (e) {};\n"
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
      "data": {
-      "application/javascript": [
-       "\n",
-       "try {\n",
-       "require(['notebook/js/codecell'], function(codecell) {\n",
-       "  codecell.CodeCell.options_default.highlight_modes[\n",
-       "      'magic_text/x-csrc'] = {'reg':[/^%%pybind11/]};\n",
-       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
-       "      Jupyter.notebook.get_cells().map(function(cell){\n",
-       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
-       "  });\n",
-       "});\n",
-       "} catch (e) {};\n"
-      ]
+      "application/javascript": "\ntry {\nrequire(['notebook/js/codecell'], function(codecell) {\n  codecell.CodeCell.options_default.highlight_modes[\n      'magic_text/x-csrc'] = {'reg':[/^%%pybind11/]};\n  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n      Jupyter.notebook.get_cells().map(function(cell){\n          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n  });\n});\n} catch (e) {};\n"
      },
      "metadata": {},
      "output_type": "display_data"
