Added markdown to comparison notebook

--- a/notebooks/0-compare-accuracies.ipynb
+++ b/notebooks/0-compare-accuracies.ipynb
@@ -1,19 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "244d592f",
+   "metadata": {},
+   "source": [
+    "# Comparing performance\n",
+    "This is a supplemental notebook for comparing the performance of the quantized model at different bit-widths to that of the original model.\n",
+    "\n",
+    "The results should align with the observations made in literature. See [here](https://github.com/zhangks98/eeg-adapt) for the benchmark.\n",
+    "\n",
+    "**Note:** This notebook should be run using CUDA as training can take time."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "27cfa6a8-d1d9-4373-a610-6af66a18b76d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
     "import json\n",
     "import h5py\n",
     "import torch\n",
     "import warnings\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "import torch.nn.functional as F\n",
+    "\n",
     "\n",
     "from os.path import join as pjoin\n",
     "from models.quantized_deep4 import QuantDeep4Net\n",
@@ -23,37 +39,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93493232",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f2ed5b3e-07c2-4e6b-b095-51d1d308ea97",
    "metadata": {},
    "outputs": [],
    "source": [
+    "n_classes = 2\n",
+    "subjs = range(1, 55)\n",
     "datapath = \"./dataset/KU_mi_smt.h5\"\n",
     "outpath = \"./results/\"\n",
+    "dfile = h5py.File(datapath, 'r')\n",
     "torch.cuda.set_device(0)\n",
-    "set_random_seeds(seed=20200205, cuda=True)\n",
-    "n_classes = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "53c964d2-6410-49c7-ad14-ada11cdf7fa4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subjs = range(1, 55)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f7fdd813-35ba-4b1c-b3a2-ae9d90f7e5c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfile = h5py.File(datapath, 'r')"
+    "set_random_seeds(seed=20200205, cuda=True)"
    ]
   },
   {
@@ -68,6 +74,14 @@
     "    X = dfile[pjoin(dpath, 'X')][:]\n",
     "    Y = dfile[pjoin(dpath, 'Y')][:]\n",
     "    return X, Y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "956d2472",
+   "metadata": {},
+   "source": [
+    "## Train Original Deep4 Model"
    ]
   },
   {
@@ -172,6 +186,14 @@
     "    model.epochs_df.to_csv(pjoin(outpath, 'float32/epochs_' + suffix + '.csv'))\n",
     "    with open(pjoin(outpath, 'float32/test_subj_' + str(subj) + '.json'), 'w') as f:\n",
     "        json.dump(test_loss, f)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "171078ae",
+   "metadata": {},
+   "source": [
+    "## Train Quantized Models (int8 -> int2)"
    ]
   },
   {
@@ -597,6 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Close the data file once training is done\n",
     "dfile.close()"
    ]
   },
@@ -605,20 +628,7 @@
    "id": "d961e9a1-4038-466d-b675-235228c03353",
    "metadata": {},
    "source": [
-    "# Plotting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "1f7c1aab-5077-40ec-9a84-5d73c1c0543e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import json\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "## Plot results"
    ]
   },
   {
