Added some markdown to the synthesis notebook

--- a/notebooks/2-synth-model-with-finn.ipynb
+++ b/notebooks/2-synth-model-with-finn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "17233ccc-fa2b-4ff1-aacf-6c430eaea488",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a0563c72-ec59-4cb0-b398-973c186a824c",
    "metadata": {},
    "outputs": [],
@@ -28,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4999fce9-dcc6-4089-9690-ac54b070dfc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous run results deleted!\n"
+     ]
+    }
+   ],
    "source": [
     "#Delete previous run results if exist\n",
     "if os.path.exists(out_dir):\n",
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4c64ae54-c1a6-40e1-987f-a60fb8a79d25",
    "metadata": {},
    "outputs": [],
@@ -50,14 +58,12 @@
     "    output_dir=out_dir,\n",
     "    mvau_wwidth_max=36,\n",
     "    target_fps=150,\n",
-    "    synth_clk_period_ns=10.0,\n",
+    "    synth_clk_period_ns=11.0,\n",
     "    board=\"Pynq-Z2\",\n",
     "    fpga_part=\"xc7z020clg400-1\",\n",
     "    shell_flow_type=build_cfg.ShellFlowType.VIVADO_ZYNQ,\n",
     "    generate_outputs=[\n",
-    "        build_cfg.DataflowOutputType.BITFILE,\n",
-    "        build_cfg.DataflowOutputType.PYNQ_DRIVER,\n",
-    "        build_cfg.DataflowOutputType.DEPLOYMENT_PACKAGE,\n",
+    "        build_cfg.DataflowOutputType.BITFILE\n",
     "    ],\n",
     "    save_intermediate_models=True,\n",
     ")"
@@ -65,13 +71,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4ae01303-22f1-4319-91e6-478577beb733",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building dataflow accelerator from ./onnx/model_s3_finn.onnx\n",
+      "Intermediate outputs will be generated in /tmp/finn_dev_dan\n",
+      "Final outputs will be generated in ./outputs/s3_output\n",
+      "Build log is at ./outputs/s3_output/build_dataflow.log\n",
+      "Running step: step_qonnx_to_finn [1/19]\n",
+      "Running step: step_tidy_up [2/19]\n",
+      "Running step: step_streamline [3/19]\n",
+      "Running step: step_convert_to_hw [4/19]\n",
+      "Running step: step_create_dataflow_partition [5/19]\n",
+      "Running step: step_specialize_layers [6/19]\n",
+      "Running step: step_target_fps_parallelization [7/19]\n",
+      "Running step: step_apply_folding_config [8/19]\n",
+      "Running step: step_minimize_bit_width [9/19]\n",
+      "Running step: step_generate_estimate_reports [10/19]\n",
+      "Running step: step_hw_codegen [11/19]\n",
+      "Running step: step_hw_ipgen [12/19]\n",
+      "Running step: step_set_fifo_depths [13/19]\n",
+      "Running step: step_create_stitched_ip [14/19]\n",
+      "Running step: step_measure_rtlsim_performance [15/19]\n",
+      "Running step: step_out_of_context_synthesis [16/19]\n",
+      "Running step: step_synthesize_bitfile [17/19]\n",
+      "Running step: step_make_pynq_driver [18/19]\n",
+      "Running step: step_deployment_package [19/19]\n",
+      "Completed successfully\n",
+      "CPU times: user 16.8 s, sys: 639 ms, total: 17.4 s\n",
+      "Wall time: 6h 36min 40s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "build.build_dataflow_cfg(model_file, cfg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da0e0137-606d-4b91-b790-cf85ff7c7028",
+   "metadata": {},
+   "source": [
+    "# Run on PYNQ\n",
+    "Now we're going to copy the bitfile we just generated and move it into the pynq-deployment directory I've created. Once we've done this we can zip it and move it to our pynq device."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dd893ea9-e8dc-439e-832a-660520c4d0f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "auto_folding_config.json  final_hw_config.json\n",
+      "bitfile\t\t\t  intermediate_models\n",
+      "build_dataflow.log\t  report\n",
+      "deploy\t\t\t  template_specialize_layers_config.json\n",
+      "driver\t\t\t  time_per_step.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show the output directory\n",
+    "! ls $out_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3a331a0f-0dd3-472e-9b7e-7aa25f723d7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bitfile_path = out_dir + \"/bitfile/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1e6b8324-9f39-4841-bd25-21fa0ad8a18f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy the bitfile directory into the pynq-deployment folder\n",
+    "! cp -r $bitfile_path ./pynq-deployment/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1724a723-8821-40e9-8db6-07fed604b328",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  adding: pynq-deployment/ (stored 0%)\n",
+      "  adding: pynq-deployment/finn/ (stored 0%)\n",
+      "  adding: pynq-deployment/finn/util/ (stored 0%)\n",
+      "  adding: pynq-deployment/finn/util/data_packing.py (deflated 70%)\n",
+      "  adding: pynq-deployment/finn/util/__init__.py (stored 0%)\n",
+      "  adding: pynq-deployment/data/ (stored 0%)\n",
+      "  adding: pynq-deployment/data/subject3_test_Y.npy (deflated 87%)\n",
+      "  adding: pynq-deployment/data/subject3_test_X.npy (deflated 89%)\n",
+      "  adding: pynq-deployment/driver.py (deflated 59%)\n",
+      "  adding: pynq-deployment/driver_base.py (deflated 74%)\n",
+      "  adding: pynq-deployment/example-bitfile/ (stored 0%)\n",
+      "  adding: pynq-deployment/example-bitfile/finn-accel.bit (deflated 76%)\n",
+      "  adding: pynq-deployment/example-bitfile/finn-accel.hwh (deflated 91%)\n",
+      "  adding: pynq-deployment/bitfile/ (stored 0%)\n",
+      "  adding: pynq-deployment/bitfile/finn-accel.bit (deflated 76%)\n",
+      "  adding: pynq-deployment/bitfile/finn-accel.hwh (deflated 91%)\n",
+      "  adding: pynq-deployment/runtime_weights/ (stored 0%)\n",
+      "  adding: pynq-deployment/qonnx/ (stored 0%)\n",
+      "  adding: pynq-deployment/qonnx/util/ (stored 0%)\n",
+      "  adding: pynq-deployment/qonnx/util/basic.py (deflated 65%)\n",
+      "  adding: pynq-deployment/qonnx/util/__init__.py (stored 0%)\n",
+      "  adding: pynq-deployment/qonnx/core/ (stored 0%)\n",
+      "  adding: pynq-deployment/qonnx/core/__init__.py (stored 0%)\n",
+      "  adding: pynq-deployment/qonnx/core/datatype.py (deflated 75%)\n",
+      "  adding: pynq-deployment/validate.ipynb (deflated 70%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Zip the pynq-deployment directory and upload it to your pynq device\n",
+    "! zip -r pynq-deployment.zip ./pynq-deployment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f35381ee-9421-4871-bfbd-9861632e099a",
+   "metadata": {},
+   "source": [
+    "Once you have the pynq zip file, upload it to your jupyter notebooks directory and unzip it. Then navigate to the validate.ipynb notebook to test the accelerator on your device"
    ]
   }
  ],
