Got deployment to replicate what was observed in training

--- a/notebooks/2-synth-model-with-finn.ipynb
+++ b/notebooks/2-synth-model-with-finn.ipynb
@@ -23,7 +23,7 @@
     "model_dir = \"./onnx\"\n",
     "model_file = model_dir + \"/model_s3_finn.onnx\"\n",
     "\n",
-    "out_dir = \"./outputs/s3_output\""
+    "out_dir = \"./outputs/example_output\""
    ]
   },
   {
@@ -31,15 +31,7 @@
    "execution_count": 3,
    "id": "4999fce9-dcc6-4089-9690-ac54b070dfc9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Previous run results deleted!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Delete previous run results if exist\n",
     "if os.path.exists(out_dir):\n",
@@ -81,8 +73,8 @@
      "text": [
       "Building dataflow accelerator from ./onnx/model_s3_finn.onnx\n",
       "Intermediate outputs will be generated in /tmp/finn_dev_dan\n",
-      "Final outputs will be generated in ./outputs/s3_output\n",
-      "Build log is at ./outputs/s3_output/build_dataflow.log\n",
+      "Final outputs will be generated in ./outputs/example_output\n",
+      "Build log is at ./outputs/example_output/build_dataflow.log\n",
       "Running step: step_qonnx_to_finn [1/19]\n",
       "Running step: step_tidy_up [2/19]\n",
       "Running step: step_streamline [3/19]\n",
@@ -103,8 +95,8 @@
       "Running step: step_make_pynq_driver [18/19]\n",
       "Running step: step_deployment_package [19/19]\n",
       "Completed successfully\n",
-      "CPU times: user 16.8 s, sys: 639 ms, total: 17.4 s\n",
-      "Wall time: 6h 36min 40s\n"
+      "CPU times: user 13.8 s, sys: 588 ms, total: 14.4 s\n",
+      "Wall time: 6h 8min 37s\n"
      ]
     },
     {
@@ -134,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "dd893ea9-e8dc-439e-832a-660520c4d0f3",
    "metadata": {},
    "outputs": [
@@ -142,11 +134,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "auto_folding_config.json  final_hw_config.json\n",
-      "bitfile\t\t\t  intermediate_models\n",
-      "build_dataflow.log\t  report\n",
-      "deploy\t\t\t  template_specialize_layers_config.json\n",
-      "driver\t\t\t  time_per_step.json\n"
+      "auto_folding_config.json  intermediate_models\n",
+      "bitfile\t\t\t  report\n",
+      "build_dataflow.log\t  template_specialize_layers_config.json\n",
+      "final_hw_config.json\t  time_per_step.json\n"
      ]
     }
    ],
@@ -157,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "3a331a0f-0dd3-472e-9b7e-7aa25f723d7a",
    "metadata": {},
    "outputs": [],
@@ -167,18 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "1e6b8324-9f39-4841-bd25-21fa0ad8a18f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Copy the bitfile directory into the pynq-deployment folder\n",
-    "! cp -r $bitfile_path ./pynq-deployment/"
+    "! cp -r $bitfile_path ./pynq-deployment/your-bitfile/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "1724a723-8821-40e9-8db6-07fed604b328",
    "metadata": {},
    "outputs": [
@@ -186,31 +177,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  adding: pynq-deployment/ (stored 0%)\n",
-      "  adding: pynq-deployment/finn/ (stored 0%)\n",
-      "  adding: pynq-deployment/finn/util/ (stored 0%)\n",
-      "  adding: pynq-deployment/finn/util/data_packing.py (deflated 70%)\n",
-      "  adding: pynq-deployment/finn/util/__init__.py (stored 0%)\n",
-      "  adding: pynq-deployment/data/ (stored 0%)\n",
-      "  adding: pynq-deployment/data/subject3_test_Y.npy (deflated 87%)\n",
-      "  adding: pynq-deployment/data/subject3_test_X.npy (deflated 89%)\n",
-      "  adding: pynq-deployment/driver.py (deflated 59%)\n",
-      "  adding: pynq-deployment/driver_base.py (deflated 74%)\n",
-      "  adding: pynq-deployment/example-bitfile/ (stored 0%)\n",
-      "  adding: pynq-deployment/example-bitfile/finn-accel.bit (deflated 76%)\n",
-      "  adding: pynq-deployment/example-bitfile/finn-accel.hwh (deflated 91%)\n",
-      "  adding: pynq-deployment/bitfile/ (stored 0%)\n",
-      "  adding: pynq-deployment/bitfile/finn-accel.bit (deflated 76%)\n",
-      "  adding: pynq-deployment/bitfile/finn-accel.hwh (deflated 91%)\n",
-      "  adding: pynq-deployment/runtime_weights/ (stored 0%)\n",
-      "  adding: pynq-deployment/qonnx/ (stored 0%)\n",
-      "  adding: pynq-deployment/qonnx/util/ (stored 0%)\n",
-      "  adding: pynq-deployment/qonnx/util/basic.py (deflated 65%)\n",
-      "  adding: pynq-deployment/qonnx/util/__init__.py (stored 0%)\n",
-      "  adding: pynq-deployment/qonnx/core/ (stored 0%)\n",
-      "  adding: pynq-deployment/qonnx/core/__init__.py (stored 0%)\n",
-      "  adding: pynq-deployment/qonnx/core/datatype.py (deflated 75%)\n",
-      "  adding: pynq-deployment/validate.ipynb (deflated 70%)\n"
+      "updating: pynq-deployment/ (stored 0%)\n",
+      "updating: pynq-deployment/finn/ (stored 0%)\n",
+      "updating: pynq-deployment/finn/util/ (stored 0%)\n",
+      "updating: pynq-deployment/finn/util/data_packing.py (deflated 70%)\n",
+      "updating: pynq-deployment/finn/util/__init__.py (stored 0%)\n",
+      "updating: pynq-deployment/data/ (stored 0%)\n",
+      "updating: pynq-deployment/data/subject3_test_Y.npy (deflated 87%)\n",
+      "updating: pynq-deployment/data/subject3_test_X.npy (deflated 89%)\n",
+      "updating: pynq-deployment/driver.py (deflated 59%)\n",
+      "updating: pynq-deployment/driver_base.py (deflated 74%)\n",
+      "updating: pynq-deployment/example-bitfile/ (stored 0%)\n",
+      "updating: pynq-deployment/example-bitfile/finn-accel.bit (deflated 76%)\n",
+      "updating: pynq-deployment/example-bitfile/finn-accel.hwh (deflated 91%)\n",
+      "updating: pynq-deployment/bitfile/ (stored 0%)\n",
+      "updating: pynq-deployment/bitfile/finn-accel.bit (deflated 76%)\n",
+      "updating: pynq-deployment/bitfile/finn-accel.hwh (deflated 91%)\n",
+      "updating: pynq-deployment/runtime_weights/ (stored 0%)\n",
+      "updating: pynq-deployment/qonnx/ (stored 0%)\n",
+      "updating: pynq-deployment/qonnx/util/ (stored 0%)\n",
+      "updating: pynq-deployment/qonnx/util/basic.py (deflated 65%)\n",
+      "updating: pynq-deployment/qonnx/util/__init__.py (stored 0%)\n",
+      "updating: pynq-deployment/qonnx/core/ (stored 0%)\n",
+      "updating: pynq-deployment/qonnx/core/__init__.py (stored 0%)\n",
+      "updating: pynq-deployment/qonnx/core/datatype.py (deflated 75%)\n",
+      "updating: pynq-deployment/validate.ipynb (deflated 70%)\n",
+      "  adding: pynq-deployment/bitfile2/ (stored 0%)\n",
+      "  adding: pynq-deployment/bitfile2/finn-accel.bit (deflated 76%)\n",
+      "  adding: pynq-deployment/bitfile2/finn-accel.hwh (deflated 91%)\n",
+      "  adding: pynq-deployment/.ipynb_checkpoints/ (stored 0%)\n",
+      "  adding: pynq-deployment/.ipynb_checkpoints/driver-checkpoint.py (deflated 59%)\n"
      ]
     }
    ],
