--- a/notebooks/pynq-deployment/validate.ipynb
+++ b/notebooks/pynq-deployment/validate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "961a2f71",
    "metadata": {},
    "outputs": [],
@@ -20,49 +20,53 @@
    "outputs": [],
    "source": [
     "bsize = 100\n",
-    "test_data = np.load('data.npy').astype('int8')\n",
-    "labels = np.load('labels.npy')\n",
-    "bitfile = \"../bitfile/finn-accel.bit\"\n",
+    "test_data = np.load('./data/subject3_test_X.npy').astype('int8')\n",
+    "labels = np.load('./data/subject3_test_Y.npy')\n",
+    "bitfile = \"./bitfile/finn-accel.bit\"\n",
+    "# bitfile = \"./your-bitfile/finn-accel.bit\"\n",
     "platform = \"zynq-iodma\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fa83ac8b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100, 1000, 1, 62)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "2f6f58ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/javascript": "\ntry {\nrequire(['notebook/js/codecell'], function(codecell) {\n  codecell.CodeCell.options_default.highlight_modes[\n      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n      Jupyter.notebook.get_cells().map(function(cell){\n          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n  });\n});\n} catch (e) {};\n"
+      "application/javascript": [
+       "\n",
+       "try {\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes[\n",
+       "      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n",
+       "} catch (e) {};\n"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
      "data": {
-      "application/javascript": "\ntry {\nrequire(['notebook/js/codecell'], function(codecell) {\n  codecell.CodeCell.options_default.highlight_modes[\n      'magic_text/x-csrc'] = {'reg':[/^%%pybind11/]};\n  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n      Jupyter.notebook.get_cells().map(function(cell){\n          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n  });\n});\n} catch (e) {};\n"
+      "application/javascript": [
+       "\n",
+       "try {\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes[\n",
+       "      'magic_text/x-csrc'] = {'reg':[/^%%pybind11/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n",
+       "} catch (e) {};\n"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f3acce4e",
    "metadata": {},
    "outputs": [],
@@ -90,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "29385c27",
    "metadata": {},
    "outputs": [
@@ -98,14 +102,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 692 ms, sys: 11 ms, total: 703 ms\n",
-      "Wall time: 702 ms\n"
+      "CPU times: user 575 ms, sys: 39.6 ms, total: 614 ms\n",
+      "Wall time: 612 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "ibuf_folded = driver.fold_input(test_data)\n",
+    "ibuf_folded = driver.fold_input(test_data[0:bsize])\n",
     "ibuf_packed = driver.pack_input(ibuf_folded)\n",
     "driver.copy_input_data_to_device(ibuf_packed)\n",
     "driver.execute_on_buffers()\n",
@@ -116,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "14971e74",
    "metadata": {},
    "outputs": [],
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0841c7ee",
    "metadata": {},
    "outputs": [
@@ -134,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.71\n"
+      "Accuracy: 0.68\n"
      ]
     }
    ],
@@ -161,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
