removed unnecessary notebook, renamed validate and added comment to training

--- a/notebooks/1-train-model-with-brevitas.ipynb
+++ b/notebooks/1-train-model-with-brevitas.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3495d25a-8833-4825-b8d6-1098dc1624f7",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "# Make note of this as it should be what you observe on the FPGA\n",
+    "# Make note of this as it should be what you observe on the FPGA (Accuracy = 1 - Missclass)\n",
     "print(test_loss)"
    ]
   },
