Added more md to the ipynbs

--- a/notebooks/0_compare_performance.ipynb
+++ b/notebooks/0_compare_performance.ipynb
@@ -792,6 +792,7 @@
     }
    ],
    "source": [
+    "# Print Per-Subject Accuracy Table\n",
     "subject_ids = [f\"subj_{subj}\" for subj in subjs]\n",
     "\n",
     "# Create DataFrame\n",
