--- a/notebooks/1-train-model-with-brevitas.ipynb
+++ b/notebooks/1-train-model-with-brevitas.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "758bd966-a719-4640-97f5-bbe08c564367",
+   "metadata": {},
+   "source": [
+    "# Train model with Brevitas\n",
+    "For this part of the demo we're going to train an int2 quantized model a single subject (e.g. 3) and export the trained from Brevitas into FINN so that it can be synthesized in the next step."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "90ed853b",
@@ -148,6 +157,7 @@
    ],
    "source": [
     "%%time\n",
+    "# I'm suppressing warnings as the Braindecode version we're using is has deprecations\n",
     "with warnings.catch_warnings():\n",
     "    warnings.simplefilter('ignore')\n",
     "    model.fit(X_train, Y_train, epochs=200, batch_size=16, scheduler='cosine', \n",
@@ -208,7 +218,8 @@
    "id": "b0b95833",
    "metadata": {},
    "source": [
-    "## Export Model to QONNX/FINN"
+    "## Export Model to QONNX/FINN\n",
+    "I would recommend using [Netron](https://netron.app) to view how the onnx files are updated in each step."
    ]
   },
   {
