--- a/notebooks/2-synth-model-with-finn.ipynb
+++ b/notebooks/2-synth-model-with-finn.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ecacc86f-9146-46b6-a273-130796b44a02",
+   "metadata": {},
+   "source": [
+    "# Synthesize Model with FINN\n",
+    "In this part of the demo we're going to load the model we exported in the last step and run it through FINN. Afterwards we'll copy the generated bitfile into the pynq-deployment folder and zip it so that you can upload it to your PYNQ board."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "17233ccc-fa2b-4ff1-aacf-6c430eaea488",
@@ -46,6 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# I'm using the Arty Z720 board. However, larger devices can achieve higher throughput (e.g. Zynq Ultrascale+)\n",
     "cfg = build.DataflowBuildConfig(\n",
     "    output_dir=out_dir,\n",
     "    mvau_wwidth_max=36,\n",
@@ -121,7 +131,7 @@
    "metadata": {},
    "source": [
     "# Run on PYNQ\n",
-    "Now we're going to copy the bitfile we just generated and move it into the pynq-deployment directory I've created. Once we've done this we can zip it and move it to our pynq device."
+    "Now we're going to copy the bitfile we just generated and move it into the pynq-deployment directory I've created. Once we've done this we can zip it, upload it to the jupyter_notebooks directory on your pynq device, unzip it and follow the last notebook. For more info on PYNQ I would recommend [this tutorial](https://www.hackster.io/90432/programming-python-on-zynq-fpga-ec4712)."
    ]
   },
   {
@@ -220,7 +230,7 @@
    "id": "f35381ee-9421-4871-bfbd-9861632e099a",
    "metadata": {},
    "source": [
-    "Once you have the pynq zip file, upload it to your jupyter notebooks directory and unzip it. Then navigate to the validate.ipynb notebook to test the accelerator on your device"
+    "Once you have the pynq zip file, upload it to your jupyter notebooks directory and unzip it. Then navigate to the 3_validate-model-with-pynq.ipynb notebook to test the accelerator on your device"
    ]
   }
  ],
