--- a/notebooks/pynq-deployment/3_validate-model-with-pynq.ipynb
+++ b/notebooks/pynq-deployment/3_validate-model-with-pynq.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a28e523f-5967-4a9e-a2eb-3767b0d60fac",
+   "metadata": {},
+   "source": [
+    "# Validate Model on Pynq\n",
+    "In this last step we're going to check if we can get the same accuracy as what we observed in 1-train-model-with-brevitas.ipynb. In my case, the accuracy I observed was 0.68."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "961a2f71",
@@ -19,12 +28,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bsize = 100\n",
+    "bsize = 100 # Full test set\n",
+    "platform = \"zynq-iodma\" # My device\n",
+    "\n",
+    "# Subject 3's data, I already quantized this in the same way that's done in models/quant_deep4.py\n",
     "test_data = np.load('./data/subject3_test_X.npy').astype('int8')\n",
     "labels = np.load('./data/subject3_test_Y.npy')\n",
+    "\n",
+    "# My example bitfile, feel free to use your own and check it's accuracy\n",
     "bitfile = \"./bitfile/finn-accel.bit\"\n",
-    "# bitfile = \"./your-bitfile/finn-accel.bit\"\n",
-    "platform = \"zynq-iodma\""
+    "# bitfile = \"./your-bitfile/finn-accel.bit\""
    ]
   },
   {
@@ -89,6 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create an empty buffer for receiving data from the device\n",
     "obuf_packed = np.empty_like(driver.obuf_packed_device[0])"
    ]
   },
@@ -165,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
